first btn ok css

--- a/Button Hover.html
+++ b/Button Hover.html
@@ -10,11 +10,11 @@
 </head>
     <h2 class="title">Button Hover</h2>
     <div class="container">
-        <button class="btn"> Hire ME</button>
+        <button class=" btn btn_1"> <span>Hire ME</span></button>
+        <!-- <button class=" btn btn_2"> Add ME</button>
+        <button class=" btn btn_3"> Contact ME</button>
+        <button class=" btn btn_4"> Refresh</button> -->
     </div>
-
-
-
 
     <script src="/Button Hover.js"></script>
     
